Set the img-container's min-height to 300px, to prevent the buttons from overlapping

--- a/src/app/image-viewer/image-viewer.component.scss
+++ b/src/app/image-viewer/image-viewer.component.scss
@@ -1,6 +1,7 @@
 .img-container {
     height: 100%;
-    width: 100%;
+	width: 100%;
+	min-height: 300px;
     overflow: hidden;
     position: relative;
 }
